--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -3547,7 +3547,7 @@ Set up your profile, stats and meters, and other relevant information here!
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
                 &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselect is &quot;A&quot;&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;願榮光歸香港&lt;/span&gt;
-                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲1簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song1&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song1&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;span id=&quot;songselectA&quot; style=&quot;color:red;&quot;&gt;&lt;/span&gt;的人選擇&lt;/span&gt;
 
@@ -3556,7 +3556,7 @@ Set up your profile, stats and meters, and other relevant information here!
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
                 &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselect is &quot;B&quot;&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;光輝歲月&lt;/span&gt;
-                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲2簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song2&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song2&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;span id=&quot;songselectB&quot; style=&quot;color:red;&quot;&gt;&lt;/span&gt;的人選擇&lt;/span&gt;
         &lt;/div&gt;
@@ -3564,7 +3564,7 @@ Set up your profile, stats and meters, and other relevant information here!
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
                 &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselect is &quot;C&quot;&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;家明&lt;/span&gt;
-                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲3簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song3&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song3&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;span id=&quot;songselectC&quot; style=&quot;color:red;&quot;&gt;&lt;/span&gt;的人選擇&lt;/span&gt;
         &lt;/div&gt;
@@ -3572,7 +3572,7 @@ Set up your profile, stats and meters, and other relevant information here!
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
                 &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselect is &quot;D&quot;&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;十年&lt;/span&gt;
-                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲4簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song4&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song4&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;span id=&quot;songselectD&quot; style=&quot;color:red;&quot;&gt;&lt;/span&gt;的人選擇&lt;/span&gt;
 
@@ -3581,7 +3581,7 @@ Set up your profile, stats and meters, and other relevant information here!
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
                 &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselect is &quot;E&quot;&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;可惜不是你&lt;/span&gt;
-                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲5簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song5&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
+                &lt;span class=&quot;artist-name&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲故事&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song5&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;span id=&quot;songselectE&quot; style=&quot;color:red;&quot;&gt;&lt;/span&gt;的人選擇&lt;/span&gt;
 
