--- a/HK/DEMO_NEW.html
+++ b/HK/DEMO_NEW.html
@@ -2303,7 +2303,7 @@ if you search strings localization in the Sugarcube 2 Documentation, it will lea
 	l10nStrings.textExport = '匯出';
 
 	// In lowercase, if possible.
-	l10nStrings.textIdentity = '遊戲';
+	l10nStrings.textIdentity = '互動體驗';
 
 	l10nStrings.textImport = '匯入';
 
