--- a/HK/experienceA.html
+++ b/HK/experienceA.html
@@ -4044,7 +4044,7 @@ HFXXX是港澳居民居留證的身分代碼。
 
 &lt;&lt;nobr&gt;&gt;&lt;div id=&quot;choicebutton&quot;&gt;
 &lt;&lt;button &#39;去其他國家&#39; &#39;ch03_4_end&#39;&gt;&gt;&lt;&lt;set $ch3result to &#39;failure02&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
-&lt;&lt;button &#39;回去香港&#39; ch03_4_end&#39;&gt;&gt;&lt;&lt;set $ch3result to &#39;failure01&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
+&lt;&lt;button &#39;回去香港&#39; &#39;ch03_4_end&#39;&gt;&gt;&lt;&lt;set $ch3result to &#39;failure01&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
 &lt;/div&gt;&lt;&lt;/nobr&gt;&gt;
 &lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="78" name="ch03_4_1_2_1" tags="" position="1650,1250" size="100,100">因為是研究領域相關，屬於專門性工作，可以透過評點制留下來。
 
