--- a/HK/experienceB.html
+++ b/HK/experienceB.html
@@ -2015,6 +2015,20 @@ importScripts("https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js")
 		console.log(err);
 	});
 
+<!-- 置入google分析 -->
+/* 在<head>元素中置入google分析的script程式碼 */
+// 創建 <script> 元素
+var scriptElement = document.createElement("script");
+// 設置 <script> 元素的屬性
+scriptElement.async = true;
+scriptElement.src = "https://www.googletagmanager.com/gtag/js?id=G-E3Z2WF3B10"; //替換成自己專案的GA追蹤碼
+// 創建用於嵌入代碼的 <script> 元素
+var codeElement = document.createElement("script");
+// 設置 <script> 元素的內容
+codeElement.innerHTML = "window.dataLayer = window.dataLayer || [];\nfunction gtag(){dataLayer.push(arguments);}\ngtag('js', new Date());\ngtag('config', 'G-E3Z2WF3B10');";
+// 將 <script> 元素添加到 <head> 元素中
+document.head.appendChild(scriptElement);
+document.head.appendChild(codeElement);
 
 /*設置favicon*/
 $(document.head).append("<link rel='icon' href='media/img/favicon.png'>");
