--- a/HK/experienceB.html
+++ b/HK/experienceB.html
@@ -4231,7 +4231,7 @@ HFXXX是港澳居民居留證的身分代碼。
         &lt;!-- second section --&gt;
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
-                &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselectA&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;願榮光歸香港&lt;/span&gt;
+                &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselectA&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;島嶼天光&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲介紹&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song1&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
 
@@ -4239,7 +4239,7 @@ HFXXX是港澳居民居留證的身分代碼。
 
         &lt;div class=&quot;song-track&quot;&gt;
             &lt;div class=&quot;song-info&quot;&gt;
-                &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselectB&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;光輝歲月&lt;/span&gt;
+                &lt;span class=&quot;song-title&quot;&gt;&lt;&lt;if $songselectB&gt;&gt;&lt;i class=&quot;fa-solid fa-square-check&quot; style=&quot;color: #17e917;&quot;&gt;&lt;/i&gt;&lt;&lt;/if&gt;&gt;是有種人&lt;/span&gt;
             &lt;/div&gt;
             &lt;span class=&quot;rate&quot;&gt;&lt;&lt;link &#39;點擊觀看歌曲介紹&#39;&gt;&gt;&lt;&lt;run Dialog.setup(&quot;歌曲簡介&quot;)&gt;&gt;&lt;&lt;run Dialog.wiki(Story.get(&#39;song2&#39;).processText())&gt;&gt;&lt;&lt;run Dialog.open()&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;
         &lt;/div&gt;
